Add sendVideo and sendAnimation features.
Signed-off-by: Matthew Skinner <matt@pcmus.com>