@@ -25,7 +25,6 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 
-import org.apache.commons.io.IOUtils;
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.jetty.client.HttpClient;
@@ -33,6 +32,7 @@ import org.eclipse.jetty.client.api.Authentication;
 import org.eclipse.jetty.client.api.AuthenticationStore;
 import org.eclipse.jetty.client.api.ContentResponse;
 import org.eclipse.jetty.client.api.Request;
+import org.eclipse.jetty.client.util.FutureResponseListener;
 import org.eclipse.jetty.http.HttpHeader;
 import org.eclipse.jetty.http.HttpMethod;
 import org.eclipse.jetty.util.B64Code;
@@ -49,8 +49,10 @@ import com.pengrad.telegrambot.model.request.InlineKeyboardButton;
 import com.pengrad.telegrambot.model.request.InlineKeyboardMarkup;
 import com.pengrad.telegrambot.request.AnswerCallbackQuery;
 import com.pengrad.telegrambot.request.EditMessageReplyMarkup;
+import com.pengrad.telegrambot.request.SendAnimation;
 import com.pengrad.telegrambot.request.SendMessage;
 import com.pengrad.telegrambot.request.SendPhoto;
+import com.pengrad.telegrambot.request.SendVideo;
 import com.pengrad.telegrambot.response.BaseResponse;
 import com.pengrad.telegrambot.response.SendResponse;
 
@@ -356,7 +358,7 @@ public class TelegramActions implements ThingActions {
                 InputStream is = Base64.getDecoder()
                         .wrap(new ByteArrayInputStream(photoB64Data.getBytes(StandardCharsets.UTF_8)));
                 try {
-                    byte[] photoBytes = IOUtils.toByteArray(is);
+                    byte[] photoBytes = is.readAllBytes();
                     sendPhoto = new SendPhoto(chatId, photoBytes);
                 } catch (IOException e) {
                     logger.warn("Malformed base64 string: {}", e.getMessage());
@@ -392,6 +394,153 @@ public class TelegramActions implements ThingActions {
     public boolean sendTelegramPhoto(@ActionInput(name = "photoURL") @Nullable String photoURL,
             @ActionInput(name = "caption") @Nullable String caption) {
         return sendTelegramPhoto(photoURL, caption, null, null);
+    }
+
+    @RuleAction(label = "send animation", description = "Send an Animation using the Telegram API.")
+    public boolean sendTelegramAnimation(@ActionInput(name = "animationURL") @Nullable String animationURL,
+            @ActionInput(name = "caption") @Nullable String caption) {
+        TelegramHandler localHandler = handler;
+        if (localHandler != null) {
+            for (Long chatId : localHandler.getReceiverChatIds()) {
+                if (!sendTelegramAnimation(chatId, animationURL, caption)) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+
+    @RuleAction(label = "send animation", description = "Send an Animation using the Telegram API.")
+    public boolean sendTelegramAnimation(@ActionInput(name = "chatId") @Nullable Long chatId,
+            @ActionInput(name = "animationURL") @Nullable String animationURL,
+            @ActionInput(name = "caption") @Nullable String caption) {
+        if (animationURL == null) {
+            logger.warn("Animation URL not defined; unable to retrieve video for sending.");
+            return false;
+        }
+        if (chatId == null) {
+            logger.warn("chatId not defined; action skipped.");
+            return false;
+        }
+        TelegramHandler localHandler = handler;
+        if (localHandler != null) {
+            final SendAnimation sendAnimation;
+            if (animationURL.toLowerCase().startsWith("http")) {
+                // load image from url
+                logger.debug("Animation URL provided.");
+                HttpClient client = localHandler.getClient();
+                if (client == null) {
+                    return false;
+                }
+                Request request = client.newRequest(animationURL).method(HttpMethod.GET).timeout(30, TimeUnit.SECONDS);
+                try {
+                    // 50mb limit to file size
+                    FutureResponseListener listener = new FutureResponseListener(request, 50 * 1024 * 1024);
+                    request.send(listener);
+                    ContentResponse contentResponse = listener.get();
+                    if (contentResponse.getStatus() == 200) {
+                        byte[] fileContent = contentResponse.getContent();
+                        sendAnimation = new SendAnimation(chatId, fileContent);
+                    } else {
+                        logger.warn("Download from {} failed with status: {}", animationURL,
+                                contentResponse.getStatus());
+                        return false;
+                    }
+                } catch (InterruptedException | ExecutionException e) {
+                    logger.warn("Download from {} failed with exception: {}", animationURL, e.getMessage());
+                    return false;
+                }
+            } else {
+                // Load video from local file system
+                logger.debug("Read file from local file system: {}", animationURL);
+                try {
+                    URL url = new URL(animationURL);
+                    sendAnimation = new SendAnimation(chatId, Paths.get(url.getPath()).toFile());
+                } catch (MalformedURLException e) {
+                    logger.warn("Malformed URL, should start with http or file: {}", animationURL);
+                    return false;
+                }
+            }
+            sendAnimation.caption(caption);
+            if (localHandler.getParseMode() != null) {
+                sendAnimation.parseMode(localHandler.getParseMode());
+            }
+            return evaluateResponse(localHandler.execute(sendAnimation));
+        }
+        return false;
+    }
+
+    @RuleAction(label = "send video", description = "Send a Video using the Telegram API.")
+    public boolean sendTelegramVideo(@ActionInput(name = "videoURL") @Nullable String videoURL,
+            @ActionInput(name = "caption") @Nullable String caption) {
+        TelegramHandler localHandler = handler;
+        if (localHandler != null) {
+            for (Long chatId : localHandler.getReceiverChatIds()) {
+                if (!sendTelegramVideo(chatId, videoURL, caption)) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+
+    @RuleAction(label = "send video", description = "Send a Video using the Telegram API.")
+    public boolean sendTelegramVideo(@ActionInput(name = "chatId") @Nullable Long chatId,
+            @ActionInput(name = "videoURL") @Nullable String videoURL,
+            @ActionInput(name = "caption") @Nullable String caption) {
+        if (videoURL == null) {
+            logger.warn("Video URL not defined; unable to retrieve video for sending.");
+            return false;
+        }
+        if (chatId == null) {
+            logger.warn("chatId not defined; action skipped.");
+            return false;
+        }
+        TelegramHandler localHandler = handler;
+        if (localHandler != null) {
+            final SendVideo sendVideo;
+            if (videoURL.toLowerCase().startsWith("http")) {
+                // load image from url
+                logger.debug("Video URL provided.");
+                HttpClient client = localHandler.getClient();
+                if (client == null) {
+                    return false;
+                }
+                Request request = client.newRequest(videoURL).method(HttpMethod.GET).timeout(30, TimeUnit.SECONDS);
+                try {
+                    // 50mb limit to file size
+                    FutureResponseListener listener = new FutureResponseListener(request, 50 * 1024 * 1024);
+                    request.send(listener);
+                    ContentResponse contentResponse = listener.get();
+                    if (contentResponse.getStatus() == 200) {
+                        byte[] fileContent = contentResponse.getContent();
+                        sendVideo = new SendVideo(chatId, fileContent);
+                    } else {
+                        logger.warn("Download from {} failed with status: {}", videoURL, contentResponse.getStatus());
+                        return false;
+                    }
+                } catch (InterruptedException | ExecutionException e) {
+                    logger.warn("Download from {} failed with exception: {}", videoURL, e.getMessage());
+                    return false;
+                }
+            } else {
+                // Load video from local file system
+                logger.debug("Read file from local file system: {}", videoURL);
+                try {
+                    URL url = new URL(videoURL);
+                    sendVideo = new SendVideo(chatId, Paths.get(url.getPath()).toFile());
+                } catch (MalformedURLException e) {
+                    logger.warn("Malformed URL, should start with http or file: {}", videoURL);
+                    return false;
+                }
+            }
+            sendVideo.caption(caption);
+            if (localHandler.getParseMode() != null) {
+                sendVideo.parseMode(localHandler.getParseMode());
+            }
+            return evaluateResponse(localHandler.execute(sendVideo));
+        }
+        return false;
     }
 
     // legacy delegate methods
@@ -438,6 +587,25 @@ public class TelegramActions implements ThingActions {
     public static boolean sendTelegramPhoto(ThingActions actions, @Nullable Long chatId, @Nullable String photoURL,
             @Nullable String caption, @Nullable String username, @Nullable String password) {
         return ((TelegramActions) actions).sendTelegramPhoto(chatId, photoURL, caption, username, password);
+    }
+
+    public static boolean sendTelegramAnimation(ThingActions actions, @Nullable String animationURL,
+            @Nullable String caption) {
+        return ((TelegramActions) actions).sendTelegramVideo(animationURL, caption);
+    }
+
+    public static boolean sendTelegramAnimation(ThingActions actions, @Nullable Long chatId,
+            @Nullable String animationURL, @Nullable String caption) {
+        return ((TelegramActions) actions).sendTelegramVideo(chatId, animationURL, caption);
+    }
+
+    public static boolean sendTelegramVideo(ThingActions actions, @Nullable String videoURL, @Nullable String caption) {
+        return ((TelegramActions) actions).sendTelegramVideo(videoURL, caption);
+    }
+
+    public static boolean sendTelegramVideo(ThingActions actions, @Nullable Long chatId, @Nullable String videoURL,
+            @Nullable String caption) {
+        return ((TelegramActions) actions).sendTelegramVideo(chatId, videoURL, caption);
     }
 
     public static boolean sendTelegramAnswer(ThingActions actions, @Nullable Long chatId, @Nullable String replyId,
